--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
 		<build.number>0</build.number>
 		<maven.build.timestamp.format>yyMMddHHmmss</maven.build.timestamp.format>
 		<build.name>${BUILD_NAME}</build.name>
+	    
+	    	<sonar.language>mule4</sonar.language> <!-- Language to Scan -->
+		<sonar.sources>src/main/[app|mule]</sonar.sources> <!-- Directory from where scan Configuration Files -->
+	    
     </properties>
 
 	<build>
@@ -53,7 +57,7 @@
                 </configuration>
 			</plugin>
 			
-			<plugin>
+			<!--<plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>2.20</version>
@@ -74,7 +78,7 @@
             <goals><goal>report</goal></goals>
         </execution>
     </executions>
-</plugin>
+</plugin>-->
 
 			
 		<plugin>
